bug(split): fix everything scrollbarized

--- a/src/components/split/split.component.scss
+++ b/src/components/split/split.component.scss
@@ -18,7 +18,7 @@
   }
 
   .ngx-split-area {
-    overflow: scroll;
+    overflow: auto;
   }
 
   .ngx-split-handle {
